# contactless-detumbling

./: .gitignore  README.md  attitude_propagator.py  control.ipynb  environment.py  main.py  main_old.py  propagator.py  test.py  train.ipynb  train.py
attitude/: attitude_anim.py  attitude_animation.py  attitude_conversion.py  attitude_propagator.py
attitude/torques/: base.py  eddy_current.py  gravity_gradient.py
examples/: control.py  control_pybind.py
old/: main_old.py
old/attitude/: attitude_animation.py  attitude_propagator.py
old/orbital/: orbit_conversion.py  orbit_propagator.py
old/robotics/: arm_propagator.py
old/utilities/: inertia_matrix.py
orbital/: orbit_propagator.py
post_processing/: main.py  system_animation.py
post_processing/attitude/: attitude_animation.py  attitude_plot.py  attitude_propagator.py
processing/: system_animation.py
propagator/: attitude.cpp  attitude.h  cppyy_compile.sh  mat.cpp  mat.h  orbit.cpp  orbit.h  prop_result.csv  propagator.cpp  propagator.h  pybind_compile.sh  robotic_arms.cpp  robotic_arms.h
robotics/: C.json  C.mat  D.json  D.mat  arm_propagator.py  end_effector.py  equationsMotion.m  matToTXT.m  plotMovement.m
sundials/build-sundials-7.0.0/FortranTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ctest1  ctest1.c  ctest1_mysub.out  ctest1_mysub_.out  ctest2  ctest2.c  ctest2_my_sub.out  ctest2_my_sub_.out  flib.f  ftest  ftest.f
sundials/build-sundials-7.0.0/LapackTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ltest  ltest.c
sundials/build-sundials-7.0.0/POSIX_TIMER_TEST/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ltest
torques/: base.py  eddy_current.py
utilities/: attitude_evol.py  entities.py  ui.py
(+436 files in other folders)
