CMAKE_MINIMUM_REQUIRED(VERSION 3.29.2)
PROJECT(ltest C)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_BUILD_TYPE "RelWithDebInfo")
SET(CMAKE_C_COMPILER "/usr/bin/cc")
SET(CMAKE_C_STANDARD 99)
SET(CMAKE_C_EXTENSIONS ON)
SET(CMAKE_C_FLAGS "")
SET(CMAKE_C_FLAGS_RELEASE "-O3 -DNDEBUG")
SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_C_FLAGS_RELWITHDEBUGINFO "")
SET(CMAKE_C_FLAGS_MINSIZE "")
ADD_EXECUTABLE(ltest ltest.c)
TARGET_COMPILE_DEFINITIONS(ltest PRIVATE "")
TARGET_LINK_LIBRARIES(ltest "")
